# nanachi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: test.yml
benches/format_bench/benches/: format_parse.rs  gen_data.rs
benches/format_bench/src/: lib.rs  manual_csv.rs  manual_http.rs  manual_ini.rs  manual_json.rs
benches/json_bench/: Cargo.toml  grammar.faputa
benches/json_bench/benches/: json_parse.rs
benches/json_bench/src/: lib.rs  manual_winnow.rs
crates/debugger/: Cargo.toml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/derive/tests/: derive_test.rs  ui_test.rs
crates/derive/tests/ui/: invalid_inline_grammar.rs  invalid_inline_grammar.stderr  missing_grammar_attr.rs  missing_grammar_attr.stderr  non_string_grammar_attr.rs  non_string_grammar_attr.stderr
crates/faputa/: Cargo.toml
crates/faputa/src/: lib.rs
crates/faputa/src/runtime/: input.rs  line_index.rs  state.rs
crates/generator/: Cargo.toml  README.md
crates/generator/examples/: codegen.rs
crates/generator/src/: expr.rs  lib.rs  rules.rs  state.rs  statement.rs
crates/generator/tests/: codegen_test.rs  fixture_test.rs
crates/meta/: Cargo.toml
crates/meta/examples/: parse.rs
crates/meta/src/: lexer.rs  lib.rs
crates/meta/src/ast/: expr.rs  grammar.rs  state.rs
crates/meta/src/hir/: expr.rs  lower.rs  mod.rs  program.rs
crates/meta/src/hir/lower/: tests.rs
crates/meta/src/hir/optimize/: dispatch.rs  inline.rs  mod.rs  normalize.rs  patterns.rs  scan.rs
crates/meta/src/hir/optimize/tests/: inline.rs  mod.rs  normalize.rs
crates/meta/src/ir/: expr.rs  lower.rs  optimize.rs  program.rs
crates/meta/src/ir/optimize/: dispatch.rs  inline.rs  mod.rs  normalize.rs  patterns.rs  tests.rs
crates/meta/src/mir/: lower.rs
crates/meta/src/mir/optimize/: dispatch.rs  list.rs  mod.rs  patterns.rs  scan.rs
crates/meta/src/mir/optimize/tests/: delimited.rs  dispatch.rs  list.rs  mod.rs  patterns.rs  scan.rs
crates/meta/src/parser/: expr.rs  grammar.rs  mod.rs  state.rs  statement.rs  tokens.rs
crates/meta/src/validator/: errors.rs  mod.rs  rules.rs  state.rs
crates/meta/tests/: compile_test.rs  lexer_test.rs  parser_test.rs  property_test.rs  validator_test.rs
crates/meta/tests/fixtures/: nested_formatting.nanachi  when_conditional.nanachi
crates/meta/tests/fixtures/invalid/: duplicates.nanachi  shadows_builtin.nanachi  undefined_state.nanachi
crates/nanachi/: Cargo.toml
crates/nanachi/src/: lib.rs
crates/nanachi/src/runtime/: input.rs  line_index.rs  mod.rs  options.rs  state.rs
crates/vm/: Cargo.toml
docs/: faputa-spec.md
examples/: README.md  markdown_bold.faputa  markdown_bold.nanachi  nested_braces.faputa  simple.nanachi
examples/error_labels/: Cargo.toml  bad.txt  grammar.faputa
examples/error_labels/src/: main.rs
examples/parse_demo/: Cargo.toml  bad.txt  grammar.faputa
examples/parse_demo/src/: main.rs
examples/parse_json/: Cargo.toml  bad.json  sample.json
examples/parse_json/src/: main.rs
fixtures/invalid/: nested_state_misuse.nanachi  undefined_rule.faputa  wrong_state_kind.nanachi
fixtures/syntax_invalid/: bare_char_literal.nanachi  builtin_rule_name.nanachi  dangling_choice.nanachi  empty_rule_body.nanachi  malformed_repeat.faputa  unexpected_character.faputa  unexpected_character.nanachi  unsupported_state_kind.nanachi  unterminated_rule.faputa
fixtures/valid/: basic_rules.nanachi  chaos_combo.nanachi  depth_and_braces.nanachi  error_labels.faputa  stateful_bold.nanachi
fuzz/: Cargo.toml
fuzz/corpus/meta_compile/: basic_rules.faputa  chaos_combo.nanachi  many_errors.nanachi
fuzz/corpus/meta_compile_dslish/: stateful.faputa
fuzz/fuzz_targets/: meta_compile.rs  meta_compile_dslish.rs
fuzz/src/: lib.rs
fuzz/tests/: smoke_test.rs
tests/e2e/: Cargo.toml  build.rs
tests/e2e/src/: lib.rs
tests/e2e/tests/: e2e_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
