[workspace]
members = ["crates/*", "xtask", "fuzz", "tests/e2e", "examples/parse_demo", "examples/parse_json", "examples/error_labels", "benches/json_bench"]
resolver = "3"

[workspace.package]
version = "0.1.4"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/levish0/nanachi"
description = "A stateful parser generator."
edition = "2024"
rust-version = "1.93.0"
keywords = ["parser", "grammar", "stateful", "codegen"]
categories = ["parsing"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
nanachi = { path = "crates/nanachi", version = "0.1.4" }
nanachi_meta = { path = "crates/meta", version = "0.1.4" }
nanachi_generator = { path = "crates/generator", version = "0.1.4" }
nanachi_derive = { path = "crates/derive", version = "0.1.4" }
nanachi_vm = { path = "crates/vm", version = "0.1.4" }
nanachi_debugger = { path = "crates/debugger", version = "0.1.4" }

# External dependencies
winnow = { version = "1.0.1", features = ["simd"] }
memchr = "2.8.0"
logos = "0.16.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
prettyplease = "0.2.37"
libfuzzer-sys = "0.4.12"
pest = "2.8.6"
pest_derive = "2.8.6"
serde_json = "1.0.149"
criterion = "0.8.2"
trybuild = "1.0.116"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.dev]
opt-level = 1
