[package]
name = "json_bench"
version = "0.0.0"
edition = "2024"
publish = false

[[bench]]
name = "json_parse"
harness = false

[dependencies]
faputa.workspace = true
faputa_derive.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde_json.workspace = true
criterion.workspace = true
