[package]
name = "nanachi_debugger"
description = "nanachi grammar debugger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nanachi.workspace = true
nanachi_meta.workspace = true
nanachi_vm.workspace = true
