[package]
name = "faputa_debugger"
description = "faputa grammar debugger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
faputa.workspace = true
faputa_meta.workspace = true
faputa_vm.workspace = true
