[package]
name = "nanachi_derive"
description = "nanachi derive macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
nanachi_meta.workspace = true
nanachi_generator.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
nanachi.workspace = true
nanachi_derive = { path = "." }
trybuild.workspace = true
