[package]
name = "faputa_derive"
description = "faputa derive macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
faputa_meta.workspace = true
faputa_generator.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
faputa.workspace = true
faputa_derive = { path = "." }
trybuild.workspace = true
