[package]
name = "faputa"
description = "A stateful parser generator."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
winnow.workspace = true
memchr.workspace = true

[features]
default = []
## Enable winnow's `debug` feature — `trace()` combinators in generated
## parsers will print a hierarchical parse tree to stderr at runtime.
## Useful for diagnosing grammar issues during development.
debug = ["winnow/debug"]
