[package]
name = "faputa_generator"
description = "faputa code generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
faputa.workspace = true
faputa_meta.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing.workspace = true

[dev-dependencies]
prettyplease.workspace = true
tracing-subscriber.workspace = true
