[package]
name = "nanachi_meta"
description = "nanachi grammar parser and validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nanachi.workspace = true
winnow.workspace = true