[package]
name = "faputa_meta"
description = "faputa grammar parser and validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
faputa.workspace = true
logos.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.6.0"
