[package]
name = "nanachi_vm"
description = "nanachi grammar virtual machine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nanachi.workspace = true
nanachi_meta.workspace = true
