[package]
name = "faputa_vm"
description = "faputa grammar virtual machine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
faputa.workspace = true
faputa_meta.workspace = true
